<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/timeListHeader_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="2" >

    <TextView
        android:id="@+id/tvTimeListHeader_position"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:gravity="center_horizontal"
        android:paddingEnd="2dip"
        android:paddingLeft="6dip"
        android:paddingRight="2dip"
        android:paddingStart="6dip"
        android:text="@string/position" />

    <TextView
        android:id="@+id/tvTimeListHeader_name"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.70"
        android:gravity="center_horizontal"
        android:paddingEnd="2dip"
        android:paddingLeft="2dip"
        android:paddingRight="2dip"
        android:paddingStart="2dip"
        android:text="@string/name" />

    <TextView
        android:id="@+id/tvTimeListHeader_time"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:gravity="center_horizontal"
        android:paddingEnd="2dip"
        android:paddingLeft="2dip"
        android:paddingRight="2dip"
        android:paddingStart="2dip"
        android:text="@string/time" />

    <TextView
        android:id="@+id/tvTimeListHeader_date"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="0.85"
        android:gravity="center"
        android:paddingLeft="2dip"
        android:paddingRight="6dip"        
        android:paddingStart="2dip"
        android:paddingEnd="6dip"
        android:text="@string/date" />

</LinearLayout>